--- a/lab-02.html
+++ b/lab-02.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Team Name: Peter, User2, Libby, Maya, User5 and Max" />
+<meta name="author" content="Team Name: Peter, Aidan, Libby, Maya, User5 and Max" />
 
 <meta name="date" content="2024-10-04" />
 
@@ -351,7 +351,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Lab 02 - Global plastic waste</h1>
-<h4 class="author">Team Name: Peter, User2, Libby, Maya, User5 and
+<h4 class="author">Team Name: Peter, Aidan, Libby, Maya, User5 and
 Max</h4>
 <h4 class="date">2024-10-04</h4>
 
@@ -367,11 +367,11 @@ library(readxl)</code></pre>
 <h2>Load &amp; join data sets</h2>
 <pre class="r"><code># Member 2 (pair 1) write code to load File 1 data here:
 
-
+data1 &lt;- read_csv(&quot;data/mismanaged-plastic-waste-per-capita.csv&quot;)
 
 # Member 4 (pair 2) write code to load File 2 data here:
 
-
+data2 &lt;- read_csv2(&quot;data/per-capita-ocean-plastic-waste.txt&quot;)
 
 # Member 6 (pair 3) write code to load File 3 data here:
 
@@ -380,12 +380,14 @@ library(readxl)</code></pre>
 # Member 1 (pair 1) write code to load File 4 data here:</code></pre>
 <pre class="r"><code># Member 2 (pair 1) write code to create object &#39;plastic_data_all&#39;:
 
-
+plastic_data_all &lt;- data1
 
 
 # Member 4 (pair 2) write code to join your data to &#39;plastic_data_all&#39;:
 
-
+plastic_data_all &lt;- data2 %&gt;%
+  select(-name) %&gt;%
+  left_join(plastic_data_all, by = &quot;code&quot;)
 
 
 # Member 6 (pair 3) write code to join your data to &#39;plastic_data_all&#39;:
@@ -394,7 +396,22 @@ library(readxl)</code></pre>
 
 
 # Member 1 (pair 1) write code to join your data to &#39;plastic_data_all&#39;:</code></pre>
-<pre class="r"><code># Member 2 (pair 1) adds code here to view the first 10 rows of &#39;plastic_data_all&#39;</code></pre>
+<pre class="r"><code># Member 2 (pair 1) adds code here to view the first 10 rows of &#39;plastic_data_all&#39;
+
+plastic_data_all %&gt;% head(n = 10)</code></pre>
+<pre><code>## # A tibble: 10 × 4
+##    code  mismanaged_plastic_ocean name                mismanaged_plastic
+##    &lt;chr&gt;                    &lt;dbl&gt; &lt;chr&gt;                            &lt;dbl&gt;
+##  1 ALB                    0.543   Albania                         24.2  
+##  2 DZA                    0.134   Algeria                         17.8  
+##  3 AGO                    0.0270  Angola                           7.45 
+##  4 ATG                    0.0206  Antigua and Barbuda              6.46 
+##  5 ARG                    0.0924  Argentina                       10.4  
+##  6 AUS                    0.00127 Australia                        0.209
+##  7 BHS                    0.0514  Bahamas                          5.69 
+##  8 BHR                    0       Bahrain                          0.636
+##  9 BGD                    0.151   Bangladesh                       6.27 
+## 10 BRB                    0.157   Barbados                         3.04</code></pre>
 </div>
 <div id="exercises" class="section level2">
 <h2>Exercises</h2>
