--- a/lab-02.html
+++ b/lab-02.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Team Name: Peter, User2, Libby, Maya, User5 and Max" />
+<meta name="author" content="Team Name: Peter, Aidan, Libby, Maya, User5 and Max" />
 
 <meta name="date" content="2024-10-04" />
 
@@ -351,7 +351,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Lab 02 - Global plastic waste</h1>
-<h4 class="author">Team Name: Peter, User2, Libby, Maya, User5 and
+<h4 class="author">Team Name: Peter, Aidan, Libby, Maya, User5 and
 Max</h4>
 <h4 class="date">2024-10-04</h4>
 
@@ -367,7 +367,7 @@ library(readxl)</code></pre>
 <h2>Load &amp; join data sets</h2>
 <pre class="r"><code># Member 2 (pair 1) write code to load File 1 data here:
 
-
+data1 &lt;- read_csv(&quot;data/mismanaged-plastic-waste-per-capita.csv&quot;)
 
 # Member 4 (pair 2) write code to load File 2 data here:
 
@@ -377,10 +377,12 @@ library(readxl)</code></pre>
 
 
 
-# Member 1 (pair 1) write code to load File 4 data here:</code></pre>
+# Member 1 (pair 1) write code to load File 4 data here:
+
+data4 &lt;- read_excel(&quot;data/UN_country_region.xlsx&quot;)</code></pre>
 <pre class="r"><code># Member 2 (pair 1) write code to create object &#39;plastic_data_all&#39;:
 
-
+plastic_data_all &lt;- data1
 
 
 # Member 4 (pair 2) write code to join your data to &#39;plastic_data_all&#39;:
@@ -394,7 +396,22 @@ library(readxl)</code></pre>
 
 
 # Member 1 (pair 1) write code to join your data to &#39;plastic_data_all&#39;:</code></pre>
-<pre class="r"><code># Member 2 (pair 1) adds code here to view the first 10 rows of &#39;plastic_data_all&#39;</code></pre>
+<pre class="r"><code># Member 2 (pair 1) adds code here to view the first 10 rows of &#39;plastic_data_all&#39;
+
+plastic_data_all %&gt;% head(n = 10)</code></pre>
+<pre><code>## # A tibble: 10 × 3
+##    name                code  mismanaged_plastic
+##    &lt;chr&gt;               &lt;chr&gt;              &lt;dbl&gt;
+##  1 Albania             ALB               24.2  
+##  2 Algeria             DZA               17.8  
+##  3 Angola              AGO                7.45 
+##  4 Antigua and Barbuda ATG                6.46 
+##  5 Argentina           ARG               10.4  
+##  6 Australia           AUS                0.209
+##  7 Bahamas             BHS                5.69 
+##  8 Bahrain             BHR                0.636
+##  9 Bangladesh          BGD                6.27 
+## 10 Barbados            BRB                3.04</code></pre>
 </div>
 <div id="exercises" class="section level2">
 <h2>Exercises</h2>
