--- a/lab-02.html
+++ b/lab-02.html
@@ -360,6 +360,7 @@ Max</h4>
 
 <div id="load-packages-and-data" class="section level3">
 <h3>Load packages and data</h3>
+<p>Test</p>
 <pre class="r"><code>library(tidyverse)
 library(readxl)</code></pre>
 </div>
@@ -443,7 +444,21 @@ plastic_data_all %&gt;%
 </div>
 <div id="ex-2." class="section level3">
 <h3>Ex 2.</h3>
-<pre class="r"><code># Write your code here to answer exercise 2</code></pre>
+<pre class="r"><code># Write your code here to answer exercise 2
+
+plastic_data_all %&gt;%
+ mutate(total_mismanage_plastic = mismanaged_plastic * population) %&gt;%
+ group_by(region) %&gt;%
+ summarise(mean_total = mean(total_mismanage_plastic))</code></pre>
+<pre><code>## # A tibble: 6 × 2
+##   region                          mean_total
+##   &lt;chr&gt;                                &lt;dbl&gt;
+## 1 Africa                             320729.
+## 2 Asia                              1026059.
+## 3 Europe                              38180.
+## 4 Latin America and The Caribbean    193450.
+## 5 North America                      147190.
+## 6 Oceania                             14577.</code></pre>
 </div>
 <div id="ex-3." class="section level3">
 <h3>Ex 3.</h3>
